--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.6",
     "promise": "8.0.1",
+    "query-string": "^6.1.0",
     "react": "^16.0.0",
     "react-dev-utils": "^4.0.1",
     "react-dom": "^16.0.0",
@@ -55,7 +56,7 @@
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js --env=jsdom",
-    "deploy": "npm run build&&gh-pages -d build"
+    "gh-push": "npm run build&&gh-pages -d build"
   },
   "jest": {
     "collectCoverageFrom": [
